# pymaf

./: .gitignore  .pre-commit-config.yaml  README.md  license.txt  pyproject.toml  setup.py
.github/workflows/: python-package.yml
notebooks/: Checks.ipynb
pymaf/: __init__.py  maf.py
pymaf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_data.py  test_maf.py
