[tool.poetry]
name = "pymaf"
version = "0.3.0"
description = "A toolbox for extracting signals from timeseries"
authors = ["Matz Haugen <matzhaugen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
repos = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
